gcc/testsuite/rust/rustc/ui/let-else/let-else-bool-binop-init.rs
//@ run-rustfix



fn main() {
    let true = true && false else { return }; // { dg-error "" "" { target *-*-* } }
    let true = true || false else { return }; // { dg-error "" "" { target *-*-* } }
}

